Finish top messages service
